fix green section intro clipped video text margin

--- a/src/app/components/green-section/green-section.component.scss
+++ b/src/app/components/green-section/green-section.component.scss
@@ -15,10 +15,35 @@
 
     .green-section-intro-clipped-video {
       position: relative;
+      align-self: center;
       width: 100%;
       height: 28rem;
+      margin-top: 6rem;
+      margin-bottom: 3rem;
 
-      margin-top: 3rem;
+      &.sm-device {
+        margin-top: 7rem;
+        height: 20rem;
+        margin-bottom: 2rem;
+      }
+
+      &.m-device {
+        margin-top: 17rem;
+        height: 25rem;
+        margin-bottom: 4rem;
+      }
+
+      &.l-device {
+        height: 20rem;
+        margin-top: 25rem;
+        margin-bottom: 3rem;
+      }
+
+      &.xl-device {
+        height: 25rem;
+        margin-top: 30rem;
+        margin-bottom: 10rem;
+      }
 
       & > * {
         width: 100%;
@@ -139,7 +164,6 @@
         }
 
         &.xl-device {
-          margin: 13rem;
           font-size: 3rem;
         }
         &.web {
@@ -526,7 +550,6 @@
                 path {
                   animation: greenParcsAnimation linear infinite
                     alternate-reverse;
-                  // transform: translate(18%, -10%) scale(0.3);
                 }
               }
             }
